3.9.3/_sources/gallery/units/index.rst.txt


.. _sphx_glr_gallery_units:

.. _units_examples:

.. _units-examples-index:

Units
=====

These examples cover the many representations of units
in Matplotlib.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The example illustrates how to create text and arrow annotations using a centimeter-scale plot.">

.. only:: html

  .. image:: /gallery/units/images/thumb/sphx_glr_annotate_with_units_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_units_annotate_with_units.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Annotation with units</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Test unit support with each of the Matplotlib primitive artist types.">

.. only:: html

  .. image:: /gallery/units/images/thumb/sphx_glr_artist_tests_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_units_artist_tests.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Artist tests</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A plot using a variety of centimetre and inch conversions. This example shows how default unit introspection works (ax1), how various keywords can be used to set the x and y units to override the defaults (ax2, ax3, ax4) and how one can set the xlimits using scalars (ax3, current units assumed) or units (conversions applied to get the numbers to current units).">

.. only:: html

  .. image:: /gallery/units/images/thumb/sphx_glr_bar_demo2_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_units_bar_demo2.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bar demo with units</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is the same example as the barchart&lt;/gallery/lines_bars_and_markers/barchart&gt; in centimeters.">

.. only:: html

  .. image:: /gallery/units/images/thumb/sphx_glr_bar_unit_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_units_bar_unit_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Group barchart with units</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Basic Units">

.. only:: html

  .. image:: /gallery/units/images/thumb/sphx_glr_basic_units_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_units_basic_units.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Basic Units</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compare the ellipse generated with arcs versus a polygonal approximation.">

.. only:: html

  .. image:: /gallery/units/images/thumb/sphx_glr_ellipse_with_units_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_units_ellipse_with_units.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ellipse with units</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="A mockup &quot;Foo&quot; units class which supports conversion and different tick formatting depending on the &quot;unit&quot;.  Here the &quot;unit&quot; is just a scalar conversion factor, but this example shows that Matplotlib is entirely agnostic to what kind of units client packages use.">

.. only:: html

  .. image:: /gallery/units/images/thumb/sphx_glr_evans_test_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_units_evans_test.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Evans test</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Plot with radians from the basic_units mockup example package.">

.. only:: html

  .. image:: /gallery/units/images/thumb/sphx_glr_radian_demo_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_units_radian_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Radian ticks</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The example illustrates the ability to override default x and y units (ax1) to inches and centimeters using the xunits and yunits parameters for the plot function. Note that conversions are applied to get numbers to correct units.">

.. only:: html

  .. image:: /gallery/units/images/thumb/sphx_glr_units_sample_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_units_units_sample.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Inches and Centimeters</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The example below shows support for unit conversions over masked arrays.">

.. only:: html

  .. image:: /gallery/units/images/thumb/sphx_glr_units_scatter_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_units_units_scatter.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Unit handling</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/units/annotate_with_units
   /gallery/units/artist_tests
   /gallery/units/bar_demo2
   /gallery/units/bar_unit_demo
   /gallery/units/basic_units
   /gallery/units/ellipse_with_units
   /gallery/units/evans_test
   /gallery/units/radian_demo
   /gallery/units/units_sample
   /gallery/units/units_scatter

